updated index.html with links to coursework for weeks 2/3

--- a/index.html
+++ b/index.html
@@ -5,5 +5,23 @@
 </head>
 <body>
 
+<h1>GitHub Pages for damonsauve</h1>
+
+<h2>General Assmebly</h2>
+
+<h3>Front-End Developer Coursework (2015)</h3>
+
+<h4>Week 2</h4>
+
+<ul>
+    <li><a href="/ga-fewd35-coursework/week_02_css_basics/resume_exercise/index.html">Resume Exercise</li>
+</ul>
+
+<h4>Week 3</h4>
+
+<ul>
+    <li><a href="/ga-fewd35-coursework/week_03_more_layout/fashion_blog/index.html">Fashion Blog</li>
+</ul>
+
 </body>
 </html>
