--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
 
 <h4>Week 2</h4>
 <ul>
-    <li><a href="/ga-fewd35-coursework/week_02_css_basics/resume_exercise/index.html">Resume Exercise</a></li>
+    <li><a href="/ga-fewd35-coursework/week_02_css_basics/resume_exercise/index.html" target="_blank">Resume Exercise</a></li>
 </ul>
 
 <h4>Week 3</h4>
 <ul>
-    <li><a href="/ga-fewd35-coursework/week_03_more_layout/fashion_blog/index.html">Fashion Blog</a></li>
+    <li><a href="/ga-fewd35-coursework/week_03_more_layout/fashion_blog/index.html" target="_blank">Fashion Blog</a></li>
 </ul>
 
 <h4>Week 4</h4>
 <ul>
-    <li><a href="/ga-fewd35-coursework/week_04_advanced_layout/bootstrap_off_canvas_template/index.html">Bootstrap Off-Canvas Layout</a></li>
+    <li><a href="/ga-fewd35-coursework/week_04_advanced_layout/bootstrap_off_canvas_template/index.html" target="_blank">Bootstrap Off-Canvas Layout</a></li>
 </ul>
 
 <h4>Week 5</h4>
 <ul>
-    <li><a href="/ga-fewd35-coursework/week_05_js_intro/08_js_basics/Memory-master/index.html">Memory Matching Game</a></li>
-    <li><a href="/ga-fewd35-coursework/week_05_js_intro/09_dom_manipulation/score_keeper_html/index.html">Score Keeper</a></li>
+    <li><a href="/ga-fewd35-coursework/week_05_js_intro/08_js_basics/Memory-master/index.html" target="_blank">Memory Matching Game</a></li>
+    <li><a href="/ga-fewd35-coursework/week_05_js_intro/09_dom_manipulation/score_keeper_html/index.html" target="_blank">Score Keeper</a></li>
 </ul>
 
 </body>
