--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <h1>GitHub Pages for damonsauve</h1>
 
-<h2>General Assmebly</h2>
+<h2>General Assembly</h2>
 
 <h3>Front-End Developer Coursework (2015)</h3>
 
