--- a/index.html
+++ b/index.html
@@ -31,5 +31,10 @@
     <li><a href="/ga-fewd35-coursework/week_05_js_intro/09_dom_manipulation/score_keeper_html/index.html" target="_blank">Score Keeper</a></li>
 </ul>
 
+<h4>Week 6</h4>
+<ul>
+    <li><a href="/ga-fewd35-coursework/week_06_jquery_intro/09_dom_manipulation/10_jquery_intro/TicTacToe/index.html" target="_blank">Score Keeper</a></li>
+</ul>
+
 </body>
 </html>
