--- a/index.html
+++ b/index.html
@@ -2,39 +2,63 @@
 <html>
 <head>
     <title>damonsauve | GitHub Pages</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 </head>
 <body>
 
-<h1>GitHub Pages for damonsauve</h1>
+<div class="container">
 
-<h2>General Assembly</h2>
+    <div class="row">
+        <div class="col-xs-12">
+            <h1>GitHub Pages for damonsauve</h1>
+            <h2>General Assembly</h2>
+            <h3>Front-End Developer Coursework (2015)</h3>
+        </div>
+    </div>
 
-<h3>Front-End Developer Coursework (2015)</h3>
+    <div class="row">
 
-<h4>Week 2</h4>
-<ul>
-    <li><a href="/ga-fewd35-coursework/week_02_css_basics/resume_exercise/index.html" target="_blank">Resume Exercise</a></li>
-</ul>
+        <div class="col-sm-6">
+            <h4>Week 2</h4>
+            <ul>
+                <li><a href="/ga-fewd35-coursework/week_02_css_basics/resume_exercise/index.html" target="_blank">Resume Exercise</a></li>
+            </ul>
+        </div>
 
-<h4>Week 3</h4>
-<ul>
-    <li><a href="/ga-fewd35-coursework/week_03_more_layout/fashion_blog/index.html" target="_blank">Fashion Blog</a></li>
-</ul>
+        <div class="col-sm-6">
+            <h4>Week 3</h4>
+            <ul>
+                <li><a href="/ga-fewd35-coursework/week_03_more_layout/fashion_blog/index.html" target="_blank">Fashion Blog</a></li>
+            </ul>
+        </div>
 
-<h4>Week 4</h4>
-<ul>
-    <li><a href="/ga-fewd35-coursework/week_04_advanced_layout/bootstrap_off_canvas_template/index.html" target="_blank">Bootstrap Off-Canvas Layout</a></li>
-</ul>
+        <div class="col-sm-6">
+            <h4>Week 4</h4>
+            <ul>
+                <li><a href="/ga-fewd35-coursework/week_04_advanced_layout/bootstrap_off_canvas_template/index.html" target="_blank">Bootstrap Off-Canvas Layout</a></li>
+            </ul>
+        </div>
 
-<h4>Week 5</h4>
-<ul>
-    <li><a href="/ga-fewd35-coursework/week_05_js_intro/09_dom_manipulation/score_keeper_html/index.html" target="_blank">Score Keeper</a></li>
-</ul>
+        <div class="col-sm-6">
+            <h4>Week 5</h4>
+            <ul>
+                <li><a href="/ga-fewd35-coursework/week_05_js_intro/09_dom_manipulation/score_keeper_html/index.html" target="_blank">Score Keeper</a></li>
+            </ul>
+        </div>
 
-<h4>Week 6</h4>
-<ul>
-    <li><a href="/ga-fewd35-coursework/week_06_jquery_intro/10_jquery_intro/TicTacToe/index.html" target="_blank">TicTacToe</a></li>
-</ul>
+        <div class="col-sm-6">
+            <h4>Week 6</h4>
+            <ul>
+                <li><a href="/ga-fewd35-coursework/week_06_jquery_intro/10_jquery_intro/TicTacToe/index.html" target="_blank">TicTacToe</a></li>
+            </ul>
+        </div>
 
+    </div>
+
+</div>
+
+
+<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </body>
 </html>
