--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <h4>Week 6</h4>
             <ul>
                 <li><a href="/ga-fewd35-coursework/week_06_jquery_intro/10_jquery_intro/TicTacToe/index.html" target="_blank">TicTacToe</a></li>
+                <li><a href="/ga-fewd35-coursework/week_06_jquery_intro/11_jquery_review/divided_times/index.html" target="_blank">Divided Times</a></li>
             </ul>
         </div>
 
