--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
             </ul>
         </div>
 
+        <div class="col-sm-12">
+            <h4>Week 7</h4>
+            <ul>
+                <li><a href="/ga-fewd35-coursework/week_07_advanced_css_and_jquery/12_jquery_bootstrap/OrganizeMe/index.html" target="_blank">Organize Me!</a></li>
+        </div>
     </div>
 
 </div>
