--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             <h4>Week 7</h4>
             <ul>
                 <li><a href="/ga-fewd35-coursework/week_07_advanced_css_and_jquery/12_jquery_bootstrap/OrganizeMe/index.html" target="_blank">Organize Me!</a></li>
+                <li><a href="/ga-fewd35-coursework/week_07_advanced_css_and_jquery/13_css_trickshots/header_redesign/header.html" target="_blank">Header Redesign</a></li>
         </div>
     </div>
 
