--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@
                 <li><a href="/ga-fewd35-coursework/week_07_advanced_css_and_jquery/12_jquery_bootstrap/OrganizeMe/index.html" target="_blank">Organize Me!</a></li>
                 <li><a href="/ga-fewd35-coursework/week_07_advanced_css_and_jquery/13_css_trickshots/header_redesign/header.html" target="_blank">Header Redesign</a></li>
         </div>
+
+        <div class="col-sm-12">
+            <h4>Week 8</h4>
+            <ul>
+                <li><a href="/ga-fewd35-coursework/week_08_forms_and_ajax/14_forms/my_form/index.html" target="_blank">My Form</a></li>
+                <li><a href="/ga-fewd35-coursework/week_08_forms_and_ajax/15_ajax/wine_app/index.html" target="_blank">Wine API App</a></li>
+        </div>
+
     </div>
 
 </div>
