Movie Title Search using Open Movie Database API

--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
                 <li><a href="/ga-fewd35-coursework/week_08_forms_and_ajax/15_ajax/wine_app/index.html" target="_blank">Wine API App</a></li>
         </div>
 
+        <div class="col-sm-12">
+            <h4>Week 9</h4>
+            <ul>
+                <li><a href="/ga-fewd35-coursework/week_09_apis_and_templating/16_templating/omdb_title_search/index.html" target="_blank">OMDB Title Search</a></li>
+        </div>
+
     </div>
 
 </div>
