--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
                 <li><a href="/ga-fewd35-coursework/week_09_apis_and_templating/16_templating/omdb_title_search/index.html" target="_blank">OMDB Title Search</a></li>
         </div>
 
+        <div class="col-sm-12">
+            <h4>Week 10</h4>
+            <ul>
+                <li><a href="http://damonsauve.github.io/ga-fewd35-coursework/week_10_student_choice/18_spotify_api/spotify_api_search/index.html" target="_blank">Spotify API Search</a></li>
+        </div>
     </div>
 
 </div>
