new structure/design for assignments

--- a/index.html
+++ b/index.html
@@ -4,90 +4,149 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>damonsauve | GitHub Pages</title>
+    <title>GitHub Code Samples | Damon Sauve</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 
 <div class="container">
 
     <div class="row">
-        <div class="col-sm-12">
-            <h1>GitHub Pages for damonsauve</h1>
-            <h2>General Assembly</h2>
-            <h3>Front-End Developer Coursework (2015)</h3>
+        <div class="col-md-12 border">
+            <h1>GitHub Code Samples</h1>
+            <h2>Damon Sauve</h2>
         </div>
     </div>
 
     <div class="row">
+        <div class="col-md-12 border">
+            <h3>Front-End Web Developer Coursework</h3>
+            <h4>General Assembly</h4>
+            <p>Selected assignments, Sept – Nov 2015.</p>
+        </div>
+    </div>
 
-        <div class="col-sm-12">
-            <h4>Week 2</h4>
+    <div class="row">
+        <div class="col-md-6 border">
+            <img src="img/01-resume_exercise.png">
+            <h4>Resume Exercise</h4>
             <ul>
-                <li><a href="/ga-fewd35-coursework/week_02_css_basics/resume_exercise/index.html" target="_blank">Resume Exercise</a></li>
+                <li>HTML and images
+                <li>CSS selectors and colors
+                <li><a href="https://github.com/damonsauve/FEWD35-Homework/tree/master/week_02_css_basics/resume_exercise" target="_blank">GitHub code</a>
+                <li><a href="./ga-fewd35/01-resume_exercise/" target="_blank">Live Version</a></li>
             </ul>
         </div>
-
-        <div class="col-sm-12">
-            <h4>Week 3</h4>
+        <div class="col-md-6 border">
+            <img src="img/02-fashion_blog.png">
+            <h4>Fashion Blog</h4>
             <ul>
-                <li><a href="/ga-fewd35-coursework/week_03_more_layout/fashion_blog/index.html" target="_blank">Fashion Blog</a></li>
+                <li>CSS positioning
+                <li>Layouts and grids
+                <li><a href="https://github.com/damonsauve/FEWD35-Homework/tree/master/week_03_more_layout/fashion_blog" target="_blank">GitHub code</a>
+                <li><a href="/ga-fewd35/02-fashion_blog/" target="_blank">Live Version</a></li>
             </ul>
         </div>
+    </div>
 
-        <div class="col-sm-12">
-            <h4>Week 4</h4>
+    <div class="row">
+        <div class="col-md-6 border">
+            <img src="img/03-bootstrap_off_canvas_clone.png">
+            <h4>Bootstrap Off-Canvas Clone</h4>
             <ul>
-                <li><a href="/ga-fewd35-coursework/week_04_advanced_layout/bootstrap_off_canvas_template/index.html" target="_blank">Bootstrap Off-Canvas Layout</a></li>
+                <li><a href="https://github.com/damonsauve/FEWD35-Homework/tree/master/week_04_advanced_layout/bootstrap_off_canvas_template" target="_blank">GitHub code</a>
+                <li><a href="/ga-fewd35/03-bootstrap_off_canvas_clone/" target="_blank">Live Version</a></li>
             </ul>
         </div>
-
-        <div class="col-sm-12">
-            <h4>Week 5</h4>
+        <div class="col-md-6 border">
+            <img src="img/04-score_keeper.png">
+            <h4>Score Keeper</h4>
             <ul>
-                <li><a href="/ga-fewd35-coursework/week_05_js_intro/09_dom_manipulation/score_keeper_html/index.html" target="_blank">Score Keeper</a></li>
+                <li><a href="https://github.com/damonsauve/FEWD35-Homework/tree/master/week_05_js_intro/09_dom_manipulation/score_keeper_html" target="_blank">GitHub code</a>
+                <li><a href="/ga-fewd35/04-score_keeper/" target="_blank">Live Version</a></li>
             </ul>
         </div>
+    </div>
 
-        <div class="col-sm-12">
-            <h4>Week 6</h4>
+    <div class="row">
+        <div class="col-md-6 border">
+            <img src="img/05-tic_tac_toe.png">
+            <h4>Tic Tac Toe</h4>
             <ul>
-                <li><a href="/ga-fewd35-coursework/week_06_jquery_intro/10_jquery_intro/TicTacToe/index.html" target="_blank">TicTacToe</a></li>
-                <li><a href="/ga-fewd35-coursework/week_06_jquery_intro/11_jquery_review/divided_times/index.html" target="_blank">Divided Times</a></li>
+                <li><a href="https://github.com/damonsauve/FEWD35-Homework/tree/master/week_06_jquery_intro/10_jquery_intro/TicTacToe" target="_blank">GitHub code</a>
+                <li><a href="/ga-fewd35/05-tic_tac_toe/" target="_blank">Live Version</a></li>
             </ul>
         </div>
-
-        <div class="col-sm-12">
-            <h4>Week 7</h4>
+        <div class="col-md-6 border">
+            <img src="img/06-divided_times.png">
+            <h4>Divided Times</h4>
             <ul>
-                <li><a href="/ga-fewd35-coursework/week_07_advanced_css_and_jquery/12_jquery_bootstrap/OrganizeMe/index.html" target="_blank">Organize Me!</a></li>
-                <li><a href="/ga-fewd35-coursework/week_07_advanced_css_and_jquery/13_css_trickshots/header_redesign/header.html" target="_blank">Header Redesign</a></li>
+                <li><a href="https://github.com/damonsauve/FEWD35-Homework/tree/master/week_06_jquery_intro/11_jquery_review/divided_times" target="_blank">GitHub code</a>
+                <li><a href="/ga-fewd35/06-divided_times/" target="_blank">Live Version</a></li>
+            </ul>
         </div>
+    </div>
 
-        <div class="col-sm-12">
-            <h4>Week 8</h4>
+    <div class="row">
+        <div class="col-md-6 border">
+            <img src="img/07-amazon_wish_list.png">
+            <h4>Amazon Wish List</h4>
             <ul>
-                <li><a href="/ga-fewd35-coursework/week_08_forms_and_ajax/14_forms/my_form/index.html" target="_blank">My Form</a></li>
-                <li><a href="/ga-fewd35-coursework/week_08_forms_and_ajax/15_ajax/wine_app/index.html" target="_blank">Wine API App</a></li>
+                <li><a href="https://github.com/damonsauve/FEWD35-Homework/tree/master/week_07_advanced_css_and_jquery/12_jquery_bootstrap/OrganizeMe!" target="_blank">GitHub code</a>
+                <li><a href="/ga-fewd35/07-amazon_wish_list/" target="_blank">Live Version</a></li>
+            </ul>
         </div>
-
-        <div class="col-sm-12">
-            <h4>Week 9</h4>
+        <div class="col-md-6 border">
+            <img src="img/08-responsive_header_redesign.png">
+            <h4>Responsive Header Redesign</h4>
             <ul>
-                <li><a href="/ga-fewd35-coursework/week_09_apis_and_templating/16_templating/omdb_title_search/index.html" target="_blank">OMDB Title Search</a></li>
+                <li><a href="https://github.com/damonsauve/FEWD35-Homework/tree/master/week_07_advanced_css_and_jquery/13_css_trickshots/header_redesign" target="_blank">GitHub code</a>
+                <li><a href="/ga-fewd35/08-responsive_header_redesign/" target="_blank">Live Version</a></li>
+            </ul>
         </div>
+    </div>
 
-        <div class="col-sm-12">
-            <h4>Week 10</h4>
+    <div class="row">
+        <div class="col-md-6 border">
+            <img src="img/09-my_form.png">
+            <h4>My Form</h4>
             <ul>
-                <li><a href="http://damonsauve.github.io/ga-fewd35-coursework/week_10_student_choice/18_spotify_api/spotify_api_search/index.html" target="_blank">Spotify API Search</a></li>
+                <li><a href="https://github.com/damonsauve/FEWD35-Homework/tree/master/week_08_forms_and_ajax/14_forms/my_form" target="_blank">GitHub code</a>
+                <li><a href="/ga-fewd35/09-my_form/" target="_blank">Live Version</a></li>
+            </ul>
+        </div>
+        <div class="col-md-6 border">
+            <img src="img/10-wine_api_app.png">
+            <h4>Wine API App</h4>
+            <ul>
+                <li><a href="https://github.com/damonsauve/FEWD35-Homework/tree/master/week_08_forms_and_ajax/15_ajax/wine_app" target="_blank">GitHub code</a>
+                <li><a href="/ga-fewd35/10-wine_api_app/" target="_blank">Live Version</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-6 border">
+            <img src="img/11-omdb_api_search.png">
+            <h4>Open Music Database (OMDB) API Search</h4>
+            <ul>
+                <li><a href="https://github.com/damonsauve/FEWD35-Homework/tree/master/week_09_apis_and_templating/16_templating/omdb_title_search" target="_blank">GitHub code</a>
+                <li><a href="/ga-fewd35/11-omdb_api_search/" target="_blank">Live Version</a></li>
+            </ul>
+        </div>
+        <div class="col-md-6 border">
+            <img src="img/12-spotify_api_search.png">
+            <h4>Spotify API Search</h4>
+            <ul>
+                <li><a href="https://github.com/damonsauve/FEWD35-Homework/tree/master/week_10_student_choice/18_spotify_api/spotify_api_search" target="_blank">GitHub code</a>
+                <li><a href="/ga-fewd35/12-spotify_api_search/" target="_blank">Live Version</a></li>
+            </ul>
         </div>
     </div>
 
 </div>
 
-
-<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </body>
 </html>
