--- a/ga-fewd35/05-tic_tac_toe/index.html
+++ b/ga-fewd35/05-tic_tac_toe/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>TicTacToe</title>
+    <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 
 <div class="container small-container">
+    Let's Play
     <div class="row" id="1">
         <div class="col-xs-4 square" id="1"></div>
         <div class="col-xs-4 square" id="2"></div>
