--- a/ga-fewd35/05-tic_tac_toe/index.html
+++ b/ga-fewd35/05-tic_tac_toe/index.html
@@ -8,7 +8,9 @@
 <body>
 
 <div class="container small-container">
-    Let's Play
+    <div class="row">
+        <div class="col-xs-12"><h3>Let's Play!</h3></div>
+    </div>
     <div class="row" id="1">
         <div class="col-xs-4 square" id="1"></div>
         <div class="col-xs-4 square" id="2"></div>
