- asymmetric column sizes for project rows - add description for Divided Times project

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>GitHub Code Samples | Damon Sauve</title>
+    <title>Web Work & Code Samples | Damon Sauve</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 <body>
@@ -30,10 +30,10 @@
     <div class="row">
         <div class="col-md-6 border level-3">
             <div class="row">
-                <div class="col-md-6 border">
+                <div class="col-md-5 border">
                     <a href="/ga-fewd35/01-resume_exercise/" target="_blank"><img src="img/01-resume_exercise.png"></a>
                 </div>
-                <div class="col-md-6 border">
+                <div class="col-md-7 border">
                     <h4>Resume Exercise</h4>
                     <p>From PNG mock-ups, build a two-page resume using HTML and CSS.</p>
                     <dl>
@@ -52,10 +52,10 @@
         </div>
         <div class="col-md-6 border level-3">
             <div class="row">
-                <div class="col-md-6 border">
+                <div class="col-md-5 border">
                     <a href="/ga-fewd35/02-fashion_blog/" target="_blank"><img src="img/02-fashion_blog.png"></a>
                 </div>
-                <div class="col-md-6 border">
+                <div class="col-md-7 border">
                     <h4>Fashion Blog</h4>
                     <p>From a PNG mock-up, build a one-page blog using a 12-column grid system.</p>
                     <dl>
@@ -77,10 +77,10 @@
     <div class="row">
         <div class="col-md-6 border level-3">
             <div class="row">
-                <div class="col-md-6 border">
+                <div class="col-md-5 border">
                     <a href="/ga-fewd35/03-bootstrap_off_canvas_clone/" target="_blank"><img src="img/03-bootstrap_off_canvas_clone.png"></a>
                 </div>
-                <div class="col-md-6 border">
+                <div class="col-md-7 border">
                     <h4>Bootstrap Off-Canvas Clone</h4>
                     <p>Clone the Bootstrap <a href ="http://getbootstrap.com/examples/offcanvas/">Off-Canvas Template</a>.
                     Exercise does not include the JavaScript to toggle the sidebar.</p>
@@ -99,10 +99,10 @@
         </div>
         <div class="col-md-6 border level-3">
             <div class="row">
-                <div class="col-md-6 border">
+                <div class="col-md-5 border">
                     <a href="/ga-fewd35/04-score_keeper/" target="_blank"><img src="img/04-score_keeper.png"></a>
                 </div>
-                <div class="col-md-6 border">
+                <div class="col-md-7 border">
                     <h4>Score Keeper</h4>
                     <p>Create a simple score-keeper application using JavaScript.</p>
                     <dl>
@@ -123,10 +123,10 @@
     <div class="row">
         <div class="col-md-6 project-cell border">
             <div class="row">
-                <div class="col-md-6 border">
+                <div class="col-md-5 border">
                     <a href="/ga-fewd35/05-tic_tac_toe/" target="_blank"><img src="img/05-tic_tac_toe.png"></a>
                 </div>
-                <div class="col-md-6 border">
+                <div class="col-md-7 border">
                     <h4>Tic Tac Toe</h4>
                     <p>Build a tic-tac-toe game from scratch using HTML, CSS, and jQuery.</p>
                     <dl>
@@ -144,16 +144,16 @@
         </div>
         <div class="col-md-6 project-cell border">
             <div class="row">
-                <div class="col-md-6 border">
+                <div class="col-md-5 border">
                     <a href="/ga-fewd35/06-divided_times/" target="_blank"><img src="img/06-divided_times.png"></a>
                 </div>
-                <div class="col-md-6 border">
+                <div class="col-md-7 border">
                     <h4>Divided Times</h4>
-                    <p>Stuff about project.</p>
+                    <p>Using jQuery, build a drop-down navigation menu for a newspaper website.</p>
                     <dl>
                         <dt>Objectives</dt>
-                        <dd></dd>
-                        <dd></dd>
+                        <dd>For click events, use jQuery to toggle an 'active' class to show/hide menu items.</dd>
+                        <dd>Use jQuery slideUp/slideDown methods to animate navigation menu.</dd>
                     </dl>
                     <dl>
                         <dt>Links</dt>
@@ -168,10 +168,10 @@
     <div class="row">
         <div class="col-md-6 project-cell border">
             <div class="row">
-                <div class="col-md-6 border">
+                <div class="col-md-5 border">
                     <a href="/ga-fewd35/07-amazon_wish_list/" target="_blank"><img src="img/07-amazon_wish_list.png"></a>
                 </div>
-                <div class="col-md-6 border">
+                <div class="col-md-7 border">
                     <h4>Amazon Wish List</h4>
                     <p>Stuff about project.</p>
                     <dl>
@@ -189,10 +189,10 @@
         </div>
         <div class="col-md-6 project-cell border">
             <div class="row">
-                <div class="col-md-6 border">
+                <div class="col-md-5 border">
                     <a href="/ga-fewd35/08-responsive_header_redesign/" target="_blank"><img src="img/08-responsive_header_redesign.png"></a>
                 </div>
-                <div class="col-md-6 border">
+                <div class="col-md-7 border">
                     <h4>Responsive Header Redesign</h4>
                     <p>Stuff about project.</p>
                     <dl>
@@ -213,10 +213,10 @@
     <div class="row">
         <div class="col-md-6 project-cell border">
             <div class="row">
-                <div class="col-md-6 border">
+                <div class="col-md-5 border">
                     <a href="/ga-fewd35/09-my_form/" target="_blank"><img src="img/09-my_form.png"></a>
                 </div>
-                <div class="col-md-6 border">
+                <div class="col-md-7 border">
                     <h4>My Form</h4>
                     <p>Stuff about project.</p>
                     <dl>
@@ -234,10 +234,10 @@
         </div>
         <div class="col-md-6 project-cell border">
             <div class="row">
-                <div class="col-md-6 border">
+                <div class="col-md-5 border">
                     <a href="/ga-fewd35/10-wine_api_app/" target="_blank"><img src="img/10-wine_api_app.png"></a>
                 </div>
-                <div class="col-md-6 border">
+                <div class="col-md-7 border">
                     <h4>Wine API App</h4>
                     <p>Stuff about project.</p>
                     <dl>
@@ -258,10 +258,10 @@
     <div class="row">
         <div class="col-md-6 project-cell border">
             <div class="row">
-                <div class="col-md-6 border">
+                <div class="col-md-5 border">
                     <a href="/ga-fewd35/11-omdb_api_search/" target="_blank"><img src="img/11-omdb_api_search.png"></a>
                 </div>
-                <div class="col-md-6 border">
+                <div class="col-md-7 border">
                     <h4>Open Music Database (OMDB) API Search</h4>
                     <p>Stuff about project.</p>
                     <dl>
@@ -279,10 +279,10 @@
         </div>
         <div class="col-md-6 project-cell border">
             <div class="row">
-                <div class="col-md-6 border">
+                <div class="col-md-5 border">
                     <a href="/ga-fewd35/12-spotify_api_search/" target="_blank"><img src="img/12-spotify_api_search.png"></a>
                 </div>
-                <div class="col-md-6 border">
+                <div class="col-md-7 border">
                     <h4>Spotify API Search</h4>
                     <p>Stuff about project.</p>
                     <dl>
