--- a/ga-fewd35/06-divided_times/index.html
+++ b/ga-fewd35/06-divided_times/index.html
@@ -486,6 +486,6 @@
 		</section>
 	</div>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-	<script src="js/damon.js"></script>
+	<script src="js/damon-v1.js"></script>
 </body>
 </html>
