--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="col-md-6 border level-3">
             <div class="row">
                 <div class="col-md-5 border">
-                    <a href="/ga-fewd35/01-resume_exercise/" target="_blank"><img src="img/01-resume_exercise.png"></a>
+                    <a href="/ga-fewd35/01-resume_exercise/" target="_blank"><img src="img/01-resume_exercise.png" class="shadow"></a>
                 </div>
                 <div class="col-md-7 border">
                     <h4>Resume Exercise</h4>
@@ -53,7 +53,7 @@
         <div class="col-md-6 border level-3">
             <div class="row">
                 <div class="col-md-5 border">
-                    <a href="/ga-fewd35/02-fashion_blog/" target="_blank"><img src="img/02-fashion_blog.png"></a>
+                    <a href="/ga-fewd35/02-fashion_blog/" target="_blank"><img src="img/02-fashion_blog.png" class="shadow"></a>
                 </div>
                 <div class="col-md-7 border">
                     <h4>Fashion Blog</h4>
@@ -78,7 +78,7 @@
         <div class="col-md-6 border level-3">
             <div class="row">
                 <div class="col-md-5 border">
-                    <a href="/ga-fewd35/03-bootstrap_off_canvas_clone/" target="_blank"><img src="img/03-bootstrap_off_canvas_clone.png"></a>
+                    <a href="/ga-fewd35/03-bootstrap_off_canvas_clone/" target="_blank"><img src="img/03-bootstrap_off_canvas_clone.png" class="shadow"></a>
                 </div>
                 <div class="col-md-7 border">
                     <h4>Bootstrap Off-Canvas Clone</h4>
@@ -100,7 +100,7 @@
         <div class="col-md-6 border level-3">
             <div class="row">
                 <div class="col-md-5 border">
-                    <a href="/ga-fewd35/04-score_keeper/" target="_blank"><img src="img/04-score_keeper.png"></a>
+                    <a href="/ga-fewd35/04-score_keeper/" target="_blank"><img src="img/04-score_keeper.png" class="shadow"></a>
                 </div>
                 <div class="col-md-7 border">
                     <h4>Score Keeper</h4>
@@ -124,7 +124,7 @@
         <div class="col-md-6 project-cell border">
             <div class="row">
                 <div class="col-md-5 border">
-                    <a href="/ga-fewd35/05-tic_tac_toe/" target="_blank"><img src="img/05-tic_tac_toe.png"></a>
+                    <a href="/ga-fewd35/05-tic_tac_toe/" target="_blank"><img src="img/05-tic_tac_toe.png" class="shadow"></a>
                 </div>
                 <div class="col-md-7 border">
                     <h4>Tic Tac Toe</h4>
@@ -145,7 +145,7 @@
         <div class="col-md-6 project-cell border">
             <div class="row">
                 <div class="col-md-5 border">
-                    <a href="/ga-fewd35/06-divided_times/" target="_blank"><img src="img/06-divided_times.png"></a>
+                    <a href="/ga-fewd35/06-divided_times/" target="_blank"><img src="img/06-divided_times.png" class="shadow"></a>
                 </div>
                 <div class="col-md-7 border">
                     <h4>Divided Times</h4>
@@ -169,7 +169,7 @@
         <div class="col-md-6 project-cell border">
             <div class="row">
                 <div class="col-md-5 border">
-                    <a href="/ga-fewd35/07-amazon_wish_list/" target="_blank"><img src="img/07-amazon_wish_list.png"></a>
+                    <a href="/ga-fewd35/07-amazon_wish_list/" target="_blank"><img src="img/07-amazon_wish_list.png" class="shadow"></a>
                 </div>
                 <div class="col-md-7 border">
                     <h4>Amazon Wish List</h4>
@@ -190,7 +190,7 @@
         <div class="col-md-6 project-cell border">
             <div class="row">
                 <div class="col-md-5 border">
-                    <a href="/ga-fewd35/08-responsive_header_redesign/" target="_blank"><img src="img/08-responsive_header_redesign.png"></a>
+                    <a href="/ga-fewd35/08-responsive_header_redesign/" target="_blank"><img src="img/08-responsive_header_redesign.png" class="shadow"></a>
                 </div>
                 <div class="col-md-7 border">
                     <h4>Responsive Header Redesign</h4>
@@ -214,7 +214,7 @@
         <div class="col-md-6 project-cell border">
             <div class="row">
                 <div class="col-md-5 border">
-                    <a href="/ga-fewd35/09-my_form/" target="_blank"><img src="img/09-my_form.png"></a>
+                    <a href="/ga-fewd35/09-my_form/" target="_blank"><img src="img/09-my_form.png" class="shadow"></a>
                 </div>
                 <div class="col-md-7 border">
                     <h4>My Form</h4>
@@ -235,7 +235,7 @@
         <div class="col-md-6 project-cell border">
             <div class="row">
                 <div class="col-md-5 border">
-                    <a href="/ga-fewd35/10-wine_api_app/" target="_blank"><img src="img/10-wine_api_app.png"></a>
+                    <a href="/ga-fewd35/10-wine_api_app/" target="_blank"><img src="img/10-wine_api_app.png" class="shadow"></a>
                 </div>
                 <div class="col-md-7 border">
                     <h4>Wine API App</h4>
@@ -259,7 +259,7 @@
         <div class="col-md-6 project-cell border">
             <div class="row">
                 <div class="col-md-5 border">
-                    <a href="/ga-fewd35/11-omdb_api_search/" target="_blank"><img src="img/11-omdb_api_search.png"></a>
+                    <a href="/ga-fewd35/11-omdb_api_search/" target="_blank"><img src="img/11-omdb_api_search.png" class="shadow"></a>
                 </div>
                 <div class="col-md-7 border">
                     <h4>Open Music Database (OMDB) API Search</h4>
@@ -280,7 +280,7 @@
         <div class="col-md-6 project-cell border">
             <div class="row">
                 <div class="col-md-5 border">
-                    <a href="/ga-fewd35/12-spotify_api_search/" target="_blank"><img src="img/12-spotify_api_search.png"></a>
+                    <a href="/ga-fewd35/12-spotify_api_search/" target="_blank"><img src="img/12-spotify_api_search.png" class="shadow"></a>
                 </div>
                 <div class="col-md-7 border">
                     <h4>Spotify API Search</h4>
