--- a/index.html
+++ b/index.html
@@ -14,26 +14,26 @@
 
     <div class="row">
         <div class="col-md-12 level-1 border">
-            <h2>Web Work & Code Samples</h1>
-            <h3>Damon Sauve</h2>
+            <h2>Web Work & Code Samples</h2>
+            <h3>Damon Sauve</h3>
         </div>
     </div>
 
     <div class="row">
         <div class="col-md-12 level-2 border">
-            <h4>Front-End Web Developer Coursework</h3>
+            <h4>Front-End Web Developer Coursework</h4>
             <p>Selected assignments, Sept - Nov 2015</p>
-            <h5>General Assembly</h5>
+            <h5>General Assembly, SF</h5>
         </div>
     </div>
 
     <div class="row">
         <div class="col-md-6 border level-3">
             <div class="row">
-                <div class="col-md-5 border">
+                <div class="col-sm-5 border">
                     <a href="/ga-fewd35/01-resume_exercise/" target="_blank"><img src="img/01-resume_exercise.png" class="shadow"></a>
                 </div>
-                <div class="col-md-7 border">
+                <div class="col-sm-7 border">
                     <h4>Resume Exercise</h4>
                     <p>From PNG mock-ups, build a two-page resume using HTML and CSS.</p>
                     <dl>
@@ -43,19 +43,19 @@
                     </dl>
                     <dl>
                         <dt>Links</dt>
-                        <dd><a href="https://github.com/damonsauve/FEWD35-Homework/tree/master/week_02_css_basics/resume_exercise" target="_blank">GitHub Code</a>
+                        <dd><a href="https://github.com/damonsauve/FEWD35-Homework/tree/master/week_02_css_basics/resume_exercise" target="_blank">GitHub Code</a></dd>
                         <dd><a href="/ga-fewd35/01-resume_exercise/" target="_blank">Live Version</a></dd>
-                        <dd><a href="https://github.com/damonsauve/damonsauve.github.io/tree/master/ga-fewd35/01-resume_exercise/mox" target="_blank">Mock-up</dd>
+                        <dd><a href="https://github.com/damonsauve/damonsauve.github.io/tree/master/ga-fewd35/01-resume_exercise/mox" target="_blank">Mock-up</a></dd>
                     </dl>
                 </div>
             </div>
         </div>
         <div class="col-md-6 border level-3">
             <div class="row">
-                <div class="col-md-5 border">
+                <div class="col-sm-5 border">
                     <a href="/ga-fewd35/02-fashion_blog/" target="_blank"><img src="img/02-fashion_blog.png" class="shadow"></a>
                 </div>
-                <div class="col-md-7 border">
+                <div class="col-sm-7 border">
                     <h4>Fashion Blog</h4>
                     <p>From a PNG mock-up, build a one-page blog using a 12-column grid system.</p>
                     <dl>
@@ -67,20 +67,19 @@
                         <dt>Links</dt>
                         <dd><a href="https://github.com/damonsauve/FEWD35-Homework/tree/master/week_03_more_layout/fashion_blog" target="_blank">GitHub Code</a>
                         <dd><a href="/ga-fewd35/02-fashion_blog/" target="_blank">Live Version</a></dd>
-                        <dd><a href="https://github.com/damonsauve/damonsauve.github.io/blob/master/ga-fewd35/02-fashion_blog/mox/fashion_blog_2.png" target="_blank">Mock-up</dd>
+                        <dd><a href="https://github.com/damonsauve/damonsauve.github.io/blob/master/ga-fewd35/02-fashion_blog/mox/fashion_blog_2.png" target="_blank">Mock-up</a></dd>
                     </dl>
                 </div>
             </div>
         </div>
     </div>
-
     <div class="row">
         <div class="col-md-6 border level-3">
             <div class="row">
-                <div class="col-md-5 border">
+                <div class="col-sm-5 border">
                     <a href="/ga-fewd35/03-bootstrap_off_canvas_clone/" target="_blank"><img src="img/03-bootstrap_off_canvas_clone.png" class="shadow"></a>
                 </div>
-                <div class="col-md-7 border">
+                <div class="col-sm-7 border">
                     <h4>Bootstrap Off-Canvas Clone</h4>
                     <p>Clone the Bootstrap <a href ="http://getbootstrap.com/examples/offcanvas/">Off-Canvas Template</a>.
                     Exercise does not include the JavaScript to toggle the sidebar.</p>
@@ -99,10 +98,10 @@
         </div>
         <div class="col-md-6 border level-3">
             <div class="row">
-                <div class="col-md-5 border">
+                <div class="col-sm-5 border">
                     <a href="/ga-fewd35/04-score_keeper/" target="_blank"><img src="img/04-score_keeper.png" class="shadow"></a>
                 </div>
-                <div class="col-md-7 border">
+                <div class="col-sm-7 border">
                     <h4>Score Keeper</h4>
                     <p>Create a simple score-keeper application using JavaScript.</p>
                     <dl>
@@ -112,21 +111,20 @@
                     </dl>
                     <dl>
                         <dt>Links</dt>
-                        <dd><a href="https://github.com/damonsauve/FEWD35-Homework/tree/master/week_05_js_intro/09_dom_manipulation/score_keeper_html" target="_blank">GitHub Code</a>
+                        <dd><a href="https://github.com/damonsauve/FEWD35-Homework/tree/master/week_05_js_intro/09_dom_manipulation/score_keeper_html" target="_blank">GitHub Code</a></dd>
                         <dd><a href="/ga-fewd35/04-score_keeper/" target="_blank">Live Version</a></dd>
                     </dl>
                 </div>
             </div>
         </div>
     </div>
-
     <div class="row">
         <div class="col-md-6 project-cell border">
             <div class="row">
-                <div class="col-md-5 border">
+                <div class="col-sm-5 border">
                     <a href="/ga-fewd35/05-tic_tac_toe/" target="_blank"><img src="img/05-tic_tac_toe.png" class="shadow"></a>
                 </div>
-                <div class="col-md-7 border">
+                <div class="col-sm-7 border">
                     <h4>Tic Tac Toe</h4>
                     <p>Build a tic-tac-toe game from scratch using HTML, CSS, and jQuery.</p>
                     <dl>
@@ -144,10 +142,10 @@
         </div>
         <div class="col-md-6 project-cell border">
             <div class="row">
-                <div class="col-md-5 border">
+                <div class="col-sm-5 border">
                     <a href="/ga-fewd35/06-divided_times/" target="_blank"><img src="img/06-divided_times.png" class="shadow"></a>
                 </div>
-                <div class="col-md-7 border">
+                <div class="col-sm-7 border">
                     <h4>Divided Times</h4>
                     <p>Using jQuery, build a drop-down navigation menu for a newspaper website.</p>
                     <dl>
@@ -164,14 +162,13 @@
             </div>
         </div>
     </div>
-
     <div class="row">
         <div class="col-md-6 project-cell border">
             <div class="row">
-                <div class="col-md-5 border">
+                <div class="col-sm-5 border">
                     <a href="/ga-fewd35/07-amazon_wish_list/" target="_blank"><img src="img/07-amazon_wish_list.png" class="shadow"></a>
                 </div>
-                <div class="col-md-7 border">
+                <div class="col-sm-7 border">
                     <h4>Amazon Wish List</h4>
                     <p>Stuff about project.</p>
                     <dl>
@@ -189,16 +186,16 @@
         </div>
         <div class="col-md-6 project-cell border">
             <div class="row">
-                <div class="col-md-5 border">
+                <div class="col-sm-5 border">
                     <a href="/ga-fewd35/08-responsive_header_redesign/" target="_blank"><img src="img/08-responsive_header_redesign.png" class="shadow"></a>
                 </div>
-                <div class="col-md-7 border">
+                <div class="col-sm-7 border">
                     <h4>Responsive Header Redesign</h4>
-                    <p>Stuff about project.</p>
+                    <p>Using jQuery, redesign existing navigation menu for mobile devices.</p>
                     <dl>
                         <dt>Objectives</dt>
-                        <dd></dd>
-                        <dd></dd>
+                        <dd>Trigger responsive jQuery functions via a small-screen media query that changes a CSS property.</dd>
+                        <dd>Modify nav-menu CSS properties and Bootstrap columns using jQuery methods.</dd>
                     </dl>
                     <dl>
                         <dt>Links</dt>
@@ -209,14 +206,13 @@
             </div>
         </div>
     </div>
-
     <div class="row">
         <div class="col-md-6 project-cell border">
             <div class="row">
-                <div class="col-md-5 border">
+                <div class="col-sm-5 border">
                     <a href="/ga-fewd35/09-my_form/" target="_blank"><img src="img/09-my_form.png" class="shadow"></a>
                 </div>
-                <div class="col-md-7 border">
+                <div class="col-sm-7 border">
                     <h4>My Form</h4>
                     <p>Stuff about project.</p>
                     <dl>
@@ -234,10 +230,10 @@
         </div>
         <div class="col-md-6 project-cell border">
             <div class="row">
-                <div class="col-md-5 border">
+                <div class="col-sm-5 border">
                     <a href="/ga-fewd35/10-wine_api_app/" target="_blank"><img src="img/10-wine_api_app.png" class="shadow"></a>
                 </div>
-                <div class="col-md-7 border">
+                <div class="col-sm-7 border">
                     <h4>Wine API App</h4>
                     <p>Stuff about project.</p>
                     <dl>
@@ -254,14 +250,13 @@
             </div>
         </div>
     </div>
-
     <div class="row">
         <div class="col-md-6 project-cell border">
             <div class="row">
-                <div class="col-md-5 border">
+                <div class="col-sm-5 border">
                     <a href="/ga-fewd35/11-omdb_api_search/" target="_blank"><img src="img/11-omdb_api_search.png" class="shadow"></a>
                 </div>
-                <div class="col-md-7 border">
+                <div class="col-sm-7 border">
                     <h4>Open Music Database (OMDB) API Search</h4>
                     <p>Stuff about project.</p>
                     <dl>
@@ -279,10 +274,10 @@
         </div>
         <div class="col-md-6 project-cell border">
             <div class="row">
-                <div class="col-md-5 border">
+                <div class="col-sm-5 border">
                     <a href="/ga-fewd35/12-spotify_api_search/" target="_blank"><img src="img/12-spotify_api_search.png" class="shadow"></a>
                 </div>
-                <div class="col-md-7 border">
+                <div class="col-sm-7 border">
                     <h4>Spotify API Search</h4>
                     <p>Stuff about project.</p>
                     <dl>
@@ -300,11 +295,12 @@
         </div>
     </div>
 
-    <div class="row footer-row">
-        <div class="col-sm-12">
+    <div class="row">
+        <div class="col-md-12 level-1 border">
             &copy; 2016 <a href="https://github.com/damonsauve">Damon Sauve</a></div>
         </div>
     </div>
+
 </div>
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
