correct dates of attendance at GA FEWD

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <div class="row">
         <div class="col-md-12 level-2 border">
             <h4>Front-End Web Developer Coursework</h4>
-            <p>Selected assignments, Sept - Nov 2015</p>
-            <h5>General Assembly, SF</h5>
+            <p>Selected Assignments, August &#151; November 2015</p>
+            <h5>General Assembly, San Francisco</h5>
         </div>
     </div>
 
